[package]
name = "sandstorm"
version = "0.0.19"
authors = ["David Renshaw <dwrenshaw@gmail.com>"]
license = "MIT"
description = "Sandstorm Cap'n Proto interfaces"
repository = "https://github.com/dwrensha/sandstorm-rust"
keywords = ["sandstorm"]
build = "build.rs"
edition = "2021"

[dependencies]
capnp = "0.18"

[build-dependencies]
capnpc = "0.18"